<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/score_text"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/heads_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/heads"/>

        <Button
            android:id="@+id/tails_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/tails"/>
    </LinearLayout>

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/latest_flip_text"
        android:layout_centerHorizontal="true"
        android:text="@string/zero_score"/>

    <TextView
        android:id="@+id/latest_flip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/coin_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/initial_flip"/>

    <ImageView
        android:id="@+id/coin_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/coina"/>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coin_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/flip"/>

</merge>
